fix button alignment on mobile

--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -200,6 +200,7 @@ button {
 /* Temp */
 .delete-excercise-form button {
     float: left;
+    line-height: 2.2rem;
     background: none;
     padding: .2rem .3rem;
     color: #ecf0f1;
